syntax = "proto3";

package synasishouse.api;

option go_package = "github.com/ymanshur/synasishouse/pb";

message CreateStockRequest {
  string code = 1;
  int32 amount = 2;
}

message StockResponse {
  bool is_available = 1;
}
